--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         comment: "浜辺で黄昏れる2人と冬の荒れた日本海、この対照的な情景に曇天がよくマッチして撮れたと思います。"
       },
       {
-        title: "司見",
-        camera: "",
-        comment: ""
+        title: "覗",
+        camera: "Nikon",
+        comment: "撮った時こっちがみられている気分になりました。"
       },
       {
         title: "憂愁ノ響",
