--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2>${art.title}</h2>
         <p><strong>使用したカメラ:</strong> ${art.camera}</p>
         <p><strong>コメント:</strong> ${art.comment}</p>
-        <a class="feedback-link" href="${feedbackURL}" target="_blank">感想はこちらから！(会場内共通)</a>
+        <a class="feedback-link" href="${feedbackURL}" target="_blank">感想はこちらから！(現在準備中)</a>
       `;
 
       gallery.appendChild(artDiv);
