--- a/index.html
+++ b/index.html
@@ -52,54 +52,44 @@
     // 作品データの配列（必要なだけ追加できます）
     const artworks = [
       {
-        title: "優しい願い",
-        camera: "Nikon Z8, NIKKOR Z 40mm f/2",
-        comment: "母親の手に包まれて寝るアヒルのヒナです。\n アヒルちゃんは元気かな"
-      },
-      {
-        title: "春の芽吹き",
-        camera: "LUMIX G99M2",
-        comment: "春っぽいな～と思って撮りました。"
-      },
-      {
-        title: "紫陽花",
-        camera:"",
-        comment:"",
-      },
-      {
-        title:"レンズの向こう側",
-        camera:"",
-        comment:"",
-      },
-      {
-        title: "黄昏と日本海",
-        camera: "SONY α7R",
-        comment: "浜辺で黄昏れる2人と冬の荒れた日本海、この対照的な情景に曇天がよくマッチして撮れたと思います。"
-      },
-      {
-        title: "覗",
-        camera: "Nikon",
-        comment: "撮った時こっちがみられている気分になりました。"
-      },
-      {
-        title: "憂愁ノ響",
-        camera: "Canon EOS Kiss X10i",
-        comment: "最終的に「響」にしたけれど、最後まで「叫」と迷っていました。"
-      },
-      {
-        title: "ピクニック",
+        title: "Spring",
         camera: "",
         comment: ""
       },
       {
-        title: "続く美来",
-        camera: "Nikonz50II",
-        comment: "手の配置と構造が難しかったです"
+        title: "秋の訪れ",
+        camera: "",
+        comment: ""
+      },
+      {
+        title: "夏山の風鈴",
+        camera:"",
+        comment:"",
+      },
+      {
+        title:"弥盛地",
+        camera:"",
+        comment:"",
+      },
+      {
+        title: "集団の中で",
+        camera: "",
+        comment: ""
+      },
+      {
+        title: "華麗",
+        camera: "",
+        comment: ""
+      },
+      {
+        title: "蟹だお！",
+        camera: "",
+        comment: ""
       }
     ];
 
     // 共通の感想フォームURL
-    const feedbackURL = "https://example.com/feedback-form"; // ←ここを実際のURLに差し替えてください
+    const feedbackURL = "https://docs.google.com/forms/d/e/1FAIpQLSe1lgaK3Cb-ep0_aEZHzJg5rvQYK3n6H4SZqnVJFUt2SUwb5w/viewform?usp=header"; // ←ここを実際のURLに差し替えてください
 
     const gallery = document.getElementById("gallery");
 
@@ -119,3 +109,4 @@
   </script>
 </body>
 </html>
+
