--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
     const artworks = [
       {
         title: "Spring",
-        camera: "",
-        comment: ""
+        camera: "Panasonic LUMIX G99m2",
+        comment: "春の芽吹きを感じました。"
       },
       {
         title: "秋の訪れ",
-        camera: "",
-        comment: ""
+        camera: "SONY α7R",
+        comment: "初秋の福井県養浩館庭園の紅葉。時が止まったような静けさの中でも、季節の巡りを感じさせてくれる赤を表現できてたら良いなと。"
       },
       {
         title: "夏山の風鈴",
-        camera:"",
-        comment:"",
+        camera:"Nikon Z8 NIKKOR Z 600mmf/6.3 VR S",
+        comment:"標高1500mほどの夏山で、風鈴のようにさえずるコマドリがいました。",
       },
       {
         title:"弥盛地",
-        camera:"",
-        comment:"",
+        camera:"Canon EOS Kiss X10i",
+        comment:"「弥盛地(いやしろち)」は現在、生物や植物の生育に適し、人間の健康にも良いとされる快適で居心地の良い土地を指します。一方で、江戸時代では神聖な場所や自然豊かな場所を指す言葉だったそうです。",
       },
       {
         title: "集団の中で",
@@ -109,4 +109,5 @@
   </script>
 </body>
 </html>
+
 
