--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2>${art.title}</h2>
         <p><strong>使用したカメラ:</strong> ${art.camera}</p>
         <p><strong>コメント:</strong> ${art.comment}</p>
-        <a class="feedback-link" href="${feedbackURL}" target="_blank">感想はこちらから！(現在準備中)</a>
+        <a class="feedback-link" href="${feedbackURL}" target="_blank">感想はこちらから！</a>
       `;
 
       gallery.appendChild(artDiv);
@@ -109,5 +109,6 @@
   </script>
 </body>
 </html>
+
 
 
